--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.2.7",
     "unplugin-auto-import": "^0.14.3",
     "unplugin-vue-components": "^0.24.0",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-compression2": "^0.8.2"
   }
 }
