--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vexip-ui": "^2.1.16",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-typical": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
