--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@vexip-ui/plugins": "^1.3.2",
-    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.6",
-    "daisyui": "^2.51.5",
     "element-plus": "^2.2.31",
-    "pinia": "^2.0.30",
+    "pinia": "^2.1.3",
     "vest": "^4.6.11",
-    "vexip-ui": "^2.1.16",
-    "vue": "^3.2.45",
+    "vexip-ui": "^2.1.22",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6",
+    "vue-router": "^4.2.1",
     "vue-typical": "^2.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.16.1",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@iconify-json/ant-design": "^1.1.5",
+    "@iconify-json/ep": "^1.1.10",
+    "@types/node": "^20.2.4",
+    "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.15",
     "naive-ui": "^2.34.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "unplugin-auto-import": "^0.14.4",
+    "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.1.0"
+    "vite": "^4.3.9",
+    "vue-tsc": "^1.6.5"
   }
 }
