--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.3.6",
     "element-plus": "^2.2.31",
     "pinia": "^2.1.3",
     "vest": "^4.6.11",
-    "vexip-ui": "^2.1.22",
+    "vexip-ui": "^2.1.23",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.1",
@@ -23,7 +24,9 @@
   "devDependencies": {
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify-json/ep": "^1.1.10",
+    "@iconify-json/icomoon-free": "^1.1.4",
     "@types/node": "^20.2.4",
+    "@vicons/carbon": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.15",
@@ -31,7 +34,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "unplugin-auto-import": "^0.14.4",
-    "unplugin-icons": "^0.16.1",
+    "unplugin-icons": "^0.16.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.9",
     "vue-tsc": "^1.6.5"
