--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,29 @@
 {
   "compilerOptions": {
     // 生成目录
-    "target": "esnext",
+    "target": "ES2020",
     // 模块
-    "module": "esnext",
+    "module": "ESNext",
     // 不允许js文件
     "allowJs": false,
     "strict": true,
     "importHelpers": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "skipLibCheck": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": true,
     "isolatedModules": true,
+    "noEmit": true,
     "lib": [
       "esnext",
-      "dom"
+      "DOM",
+      "ES2020",
+      "DOM.Iterable"
     ],
     "outDir": "dist",
     "jsx": "preserve",
@@ -44,7 +49,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/type/auto-imports.d.ts",
-    "src/type/components.d.ts"
+    "src/type/components.d.ts",
+    "./vite.config.ts"
   ],
   "references": [
     {
