--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vexip-ui": "^2.1.23",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
+    "vue-pdf-embed": "^1.1.6",
     "vue-router": "^4.2.1",
     "vue-typical": "^2.1.0"
   },
@@ -25,8 +26,8 @@
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify-json/ep": "^1.1.10",
     "@iconify-json/icomoon-free": "^1.1.4",
-    "@vicons/carbon": "^0.12.0",
     "@types/node": "^20.2.4",
+    "@vicons/carbon": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.15",
