--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "element-plus": "^2.2.31",
     "pinia": "^2.1.3",
     "vest": "^4.6.11",
-    "vexip-ui": "^2.1.23",
+    "vexip-ui": "^2.2.2",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-pdf-embed": "^1.1.6",
@@ -34,6 +34,7 @@
     "naive-ui": "^2.34.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-icons": "^0.16.2",
     "unplugin-vue-components": "^0.24.1",
