--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": false,
     "strict": true,
     "importHelpers": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -20,10 +20,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "lib": [
-      "esnext",
-      "DOM",
-      "dom",
       "ES2020",
+      "DOM",
       "DOM.Iterable"
     ],
     "outDir": "dist",
