--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": false,
     "strict": true,
     "importHelpers": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -18,6 +18,7 @@
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": true,
     "isolatedModules": true,
+    "allowImportingTsExtensions": true,
     "noEmit": true,
     "lib": [
       "ES2020",
@@ -35,7 +36,8 @@
     "types": [
       "unplugin-icons/types/vue",
       "vite/client",
-      "vexip-ui/types"
+      "vexip-ui/types",
+      "element-plus/global"
     ],
     "forceConsistentCasingInFileNames": true
   },
@@ -44,8 +46,8 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "src/type/auto-imports.d.ts",
-    "src/type/components.d.ts",
+    "src/types/auto-imports.d.ts",
+    "src/types/components.d.ts",
     "./vite.config.ts"
   ],
   "references": [
