--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "vue-i18n": "^9.4.1",
     "vue-pdf-embed": "^1.1.6",
     "vue-router": "^4.2.1",
-    "vue-typical": "^2.1.0"
+    "vue-typical": "^2.1.0",
+    "@types/node": "^20.2.4"
   },
   "devDependencies": {
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify-json/ep": "^1.1.10",
     "@iconify-json/icomoon-free": "^1.1.4",
-    "@types/node": "^20.2.4",
+    "@unocss/transformer-directives": "^0.56.5",
+    "@unocss/transformer-variant-group": "^0.56.5",
     "@vicons/carbon": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.15",
     "naive-ui": "^2.34.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
+    "unocss": "0.56.5",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-icons": "^0.16.2",
     "unplugin-vue-components": "^0.24.1",
