--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
+    "@popperjs/core": "^2.11.8",
+    "@types/node": "^20.2.4",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.3.6",
     "element-plus": "^2.2.31",
     "pinia": "^2.1.3",
+    "v-calendar": "^3.1.2",
     "vexip-ui": "^2.2.2",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.1",
     "vue-pdf-embed": "^1.1.6",
     "vue-router": "^4.2.1",
-    "vue-typical": "^2.1.0",
-    "@types/node": "^20.2.4"
+    "vue-typical": "^2.1.0"
   },
   "devDependencies": {
     "@iconify-json/ant-design": "^1.1.5",
