--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "management-system-front-end",
+  "name": "front-end",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,11 +13,11 @@
     "@popperjs/core": "^2.11.8",
     "@types/node": "^20.2.4",
     "@vueuse/core": "^10.1.2",
-    "axios": "^1.3.6",
+    "axios": "1.6.5",
     "element-plus": "^2.2.31",
     "pinia": "^2.1.3",
     "v-calendar": "^3.1.2",
-    "vexip-ui": "^2.2.2",
+    "vexip-ui": "^2.2.23",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.1",
     "vue-pdf-embed": "^1.1.6",
