--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pinia": "^2.1.3",
     "v-calendar": "^3.1.2",
     "vexip-ui": "^2.2.23",
-    "vue": "^3.3.4",
+    "vue": "^3.4.6",
     "vue-i18n": "^9.4.1",
     "vue-pdf-embed": "^1.1.6",
     "vue-router": "^4.2.1",
@@ -28,6 +28,7 @@
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify-json/ep": "^1.1.10",
     "@iconify-json/icomoon-free": "^1.1.4",
+    "@iconify-json/svg-spinners": "^1.1.2",
     "@unocss/transformer-directives": "^0.56.5",
     "@unocss/transformer-variant-group": "^0.56.5",
     "@vicons/carbon": "^0.12.0",
