--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "vue-typical": "^2.1.0"
   },
   "devDependencies": {
+    "vite-plugin-full-reload": "^1.1.0",
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify-json/ep": "^1.1.10",
     "@iconify-json/icomoon-free": "^1.1.4",
     "@iconify-json/svg-spinners": "^1.1.2",
-    "@unocss/transformer-directives": "^0.56.5",
-    "@unocss/transformer-variant-group": "^0.56.5",
+    "@unocss/transformer-directives": "^0.58.3",
+    "@unocss/transformer-variant-group": "^0.58.3",
     "@vicons/carbon": "^0.12.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^5.0.3",
     "autoprefixer": "^10.4.13",
     "naive-ui": "^2.34.3",
     "typescript": "^5.2.2",
-    "unocss": "0.56.5",
+    "unocss": "0.58.3",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-icons": "^0.16.2",
     "unplugin-vue-components": "^0.24.1",
